--- a/tools/match-input-helper-copy.html
+++ b/tools/match-input-helper-copy.html
@@ -105,7 +105,7 @@
 
     <h3>自チーム（pair）</h3>
     <input type="text" id="pair1" list="players" />
-    <input type="text" id="pair2" list="players" />
+    <!-- <input type="text" id="pair2" list="players" /> -->
     <datalist id="players"></datalist>
 
     <hr />
@@ -124,216 +124,47 @@
         <input type="text" id="op1_id" />
     </label>
 
-    <h3>相手選手2（ダブルスの場合のみ）</h3>
-    <label>姓（lastName）：
-        <input type="text" id="op2_lastName" oninput="this.value = this.value.replace(/\s/g, '')" />
-    </label>
-    <label>名（firstName・空欄可）：
-        <input type="text" id="op2_firstName" oninput="this.value = this.value.replace(/\s/g, '')" />
-    </label>
-    <label>所属（team）：
-        <input type="text" id="op2_team" />
-    </label>
-    <label>ID（わかれば）：
-        <input type="text" id="op2_id" />
-    </label>
+    <div style="display: none;">
+        <h3>相手選手2（ダブルスの場合のみ）</h3>
+        <label>姓（lastName）：
+            <input type="text" id="op2_lastName" oninput="this.value = this.value.replace(/\s/g, '')" />
+        </label>
+        <label>名（firstName・空欄可）：
+            <input type="text" id="op2_firstName" oninput="this.value = this.value.replace(/\s/g, '')" />
+        </label>
+        <label>所属（team）：
+            <input type="text" id="op2_team" />
+        </label>
+        <label>ID（わかれば）：
+            <input type="text" id="op2_id" />
+        </label>
+    </div>
 
     <button onclick="generateJSON()">JSONを生成</button>
+    <button onclick="addToJSONArray()">JSONを追加</button>
+    <button onclick="clearJSONArray()">配列をクリア</button>
 
     <textarea id="output" placeholder="ここにJSONが表示されます"></textarea>
+    <textarea id="jsonArrayOutput" placeholder="ここに配列形式のJSONが表示されます"></textarea>
 
     <script>
         const teamData = {
-            "name": "日本体育大学",
-            "players": {
-                "kurosaka-takuya": {
-                    "firstName": "卓矢",
-                    "lastName": "黒坂"
-                },
-                "mori-ryosuke": {
-                    "firstName": "良輔",
-                    "lastName": "森"
-                },
-                "takeda-ryo": {
-                    "firstName": "凌",
-                    "lastName": "竹田"
-                },
-                "iwata-kohei": {
-                    "firstName": "皓平",
-                    "lastName": "岩田"
-                },
-                "fujii-tomoki": {
-                    "firstName": "智暉",
-                    "lastName": "藤井"
-                },
-                "yosida-takuto": {
-                    "firstName": "拓翔",
-                    "lastName": "吉田"
-                },
-                "kataoka-aki": {
-                    "firstName": "暁紀",
-                    "lastName": "片岡"
-                },
-                "hiruma-yusuke": {
-                    "firstName": "悠佑",
-                    "lastName": "昼間"
-                },
-                "kawasaki-kohei": {
-                    "firstName": "康平",
-                    "lastName": "川崎"
-                },
-                "terai-manato": {
-                    "firstName": "真斗",
-                    "lastName": "寺井"
-                },
-                "miyahara-takao": {
-                    "firstName": "貴生",
-                    "lastName": "宮原"
-                },
-                "saito-kyouhei": {
-                    "firstName": "恭平",
-                    "lastName": "斎藤"
-                },
-                "nishi-kanato": {
-                    "firstName": "奏人",
-                    "lastName": "西"
-                },
-                "watanabe-kousuke": {
-                    "firstName": "康介",
-                    "lastName": "渡辺"
-                },
-                "abe-rensei": {
-                    "firstName": "蓮生",
-                    "lastName": "安部"
-                },
-                "mouri-kaisei": {
-                    "firstName": "快生",
-                    "lastName": "毛利"
-                },
-                "hayashi-seita": {
-                    "firstName": "星汰",
-                    "lastName": "林"
-                },
-                "noguchi-kai": {
-                    "firstName": "快",
-                    "lastName": "野口"
-                },
-                "inami-koyu": {
-                    "firstName": "虎佑",
-                    "lastName": "稲見"
-                },
-                "tsushima-seora": {
-                    "firstName": "青空",
-                    "lastName": "津島"
-                },
-                "kamijo-shinnosuke": {
-                    "firstName": "真之介",
-                    "lastName": "上城"
-                },
-                "murasaki-yuya": {
-                    "firstName": "優哉",
-                    "lastName": "村崎"
-                },
-                "negishi-remon": {
-                    "firstName": "澪紋",
-                    "lastName": "根岸"
-                },
-                "kiyojima-kazusa": {
-                    "firstName": "一颯",
-                    "lastName": "清島"
-                },
-                "arai-sota": {
-                    "firstName": "颯太",
-                    "lastName": "新井"
-                },
-                "osaki-shunya": {
-                    "firstName": "峻也",
-                    "lastName": "大崎"
-                },
-                "komi-akito": {
-                    "firstName": "碧斗",
-                    "lastName": "小見"
-                },
-                "matsuo-shishinosuke": {
-                    "firstName": "獅子之介",
-                    "lastName": "松尾"
-                },
-                "tomabechi-katsunari": {
-                    "firstName": "勝成",
-                    "lastName": "苫米地"
-                },
-                "fukami-seita": {
-                    "firstName": "星太",
-                    "lastName": "深海"
-                },
-                "toyama-haruto": {
-                    "firstName": "陽翔",
-                    "lastName": "外山"
-                },
-                "okamoto-souma": {
-                    "firstName": "颯舞",
-                    "lastName": "岡本"
-                },
-                "fukushima-ryo": {
-                    "firstName": "涼",
-                    "lastName": "福島"
-                },
-                "yabiku-hiromu": {
-                    "firstName": "大夢",
-                    "lastName": "屋比久"
-                },
-                "terai-masato": {
-                    "firstName": "真斗",
-                    "lastName": "寺井"
-                },
-                "takahashi-kaito": {
-                    "firstName": "海斗",
-                    "lastName": "高橋"
-                },
-                "takeda-yutaka": {
-                    "firstName": "豊",
-                    "lastName": "武田"
-                },
-                "yanaka-yasuo": {
-                    "firstName": "康生",
-                    "lastName": "谷中"
-                },
-                "hosokawa-taiga": {
-                    "firstName": "大峨",
-                    "lastName": "細川"
-                },
-                "kuno-riki": {
-                    "firstName": "莉輝",
-                    "lastName": "久野"
-                },
-                "okada-masato": {
-                    "firstName": "弥真斗",
-                    "lastName": "岡田"
-                },
-                "matsuda-yoshiaki": {
-                    "firstName": "義明",
-                    "lastName": "松田"
-                },
-                "yoshida-takuto": {
-                    "firstName": "拓翔",
-                    "lastName": "吉田"
-                },
-                "sato-shunsuke": {
-                    "firstName": "駿丞",
-                    "lastName": "佐藤"
-                },
-                "inamaru-shido": {
-                    "firstName": "獅道",
-                    "lastName": "稲丸"
-                },
-                "hirai-keigo": {
-                    "firstName": "啓吾",
-                    "lastName": "平井"
-                },
-                "kenjo-kawamoto": {
-                    "firstName": "健士郎",
-                    "lastName": "川本"
-                },
+            players: {
+                "uematsu-toshiki": { firstName: "俊貴", lastName: "上松" },
+                "ueoka-shunsuke": { firstName: "俊介", lastName: "上岡" },
+                "hashiba-toichiro": { firstName: "柊一郎", lastName: "橋場" },
+                "yonekawa-yuto": { firstName: "悠翔", lastName: "米川" },
+                "hirooka-sora": { firstName: "宙", lastName: "広岡" },
+                "kurosaka-takuya": { firstName: "卓矢", lastName: "黒坂" },
+                "motokura-kentaro": { firstName: "健太郎", lastName: "本倉" },
+                "uchimoto-takafumi": { firstName: "貴文", lastName: "内本" },
+                "yano-soto": { firstName: "颯人", lastName: "矢野" },
+                "maruyama-kaito": { firstName: "海斗", lastName: "丸山" },
+                "kataoka-aki": { firstName: "暁紀", lastName: "片岡" },
+                "nagae-koichi": { firstName: "浩一", lastName: "永江" },
+                "ando-yusaku": { firstName: "悠作", lastName: "安藤" },
+                "kawasaki-kohei": { firstName: "康平", lastName: "川崎" },
+                "uchida-riku": { firstName: "理久", lastName: "内田" }
             }
         };
 
@@ -373,9 +204,9 @@
             let result = '';
             if (!isNaN(won) && !isNaN(lost)) {
                 if (won > lost) {
-                    result = 'win';
+                    result = '勝ち';
                 } else if (won < lost) {
-                    result = 'lose';
+                    result = '負け';
                 } else {
                     result = 'draw';  // 同点の場合
                 }
@@ -385,26 +216,25 @@
 
             const data = {
                 round: getVal("round"),
-                result: result,  // ここに自動判定結果をセット
-                games: {
-                    won: getVal("game_won"),
-                    lost: getVal("game_lost")
-                },
-                pair: [getVal("pair1"), getVal("pair2")].filter(v => v),
+                opponent: `${getVal("op1_lastName")}（${getVal("op1_team")}）`,
                 opponents: [
                     {
-                        lastName: getVal("op1_lastName"),
-                        firstName: getVal("op1_firstName"),
+                        name: getVal("op1_lastName"),
                         team: getVal("op1_team"),
                         playerId: getVal("op1_id")
                     },
                     {
-                        lastName: getVal("op2_lastName"),
-                        firstName: getVal("op2_firstName"),
+                        name: getVal("op2_lastName"),
                         team: getVal("op2_team"),
                         playerId: getVal("op2_id")
                     }
-                ].filter(op => op.lastName || op.firstName || op.team || op.id)
+                ].filter(op => op.name || op.team || op.playerId),
+                result: result,
+                score: '' + won + '-' + lost,
+                games: {
+                    won: getVal("game_won"),
+                    lost: getVal("game_lost")
+                }
             };
 
             document.getElementById("output").value = JSON.stringify(data, null, 2);
@@ -483,6 +313,39 @@
         }
         // 初期化実行
         initPlayerDropdown();
+
+        // JSONデータを保持する配列
+        const jsonArray = [];
+
+        function addToJSONArray() {
+            // 生成されたJSONを取得
+            const output = document.getElementById("output").value.trim();
+            if (output === "") {
+                alert("JSONが空です。データを生成してください。");
+                return;
+            }
+
+            // 追加先のテキストエリアを取得
+            const jsonArrayOutput = document.getElementById("jsonArrayOutput");
+            const currentText = jsonArrayOutput.value.trim();
+
+            // すでにテキストがある場合は末尾にカンマを追加して改行
+            if (currentText !== "") {
+                jsonArrayOutput.value = currentText + ",\n" + output;
+            } else {
+                // テキストがない場合はそのまま追加
+                jsonArrayOutput.value = output;
+            }
+
+            // ラウンドを1つ増やす
+            nextRound();
+        }
+
+        function clearJSONArray() {
+            // 配列をクリア
+            jsonArray.length = 0;
+            document.getElementById("jsonArrayOutput").value = "";
+        }
 
     </script>
 </body>
