fix: correct player names in JSON files for consistency

--- a/tools/match-input-helper-copy.html
+++ b/tools/match-input-helper-copy.html
@@ -185,7 +185,7 @@
                 "hayashi-seita": { firstName: "星汰", lastName: "林" },
                 "noguchi-kai": { firstName: "快", lastName: "野口" },
                 "inami-koyu": { firstName: "虎佑", lastName: "稲見" },
-                "tsushima-seora": { firstName: "青空", lastName: "津島" },
+                "tsushima-sora": { firstName: "青空", lastName: "津島" },
                 "kamijo-shinnosuke": { firstName: "真之介", lastName: "上城" },
                 "murasaki-yuya": { firstName: "優哉", lastName: "村崎" },
                 "negishi-remon": { firstName: "澪紋", lastName: "根岸" },
@@ -200,7 +200,6 @@
                 "okamoto-souma": { firstName: "颯舞", lastName: "岡本" },
                 "fukushima-ryo": { firstName: "涼", lastName: "福島" },
                 "yabiku-hiromu": { firstName: "大夢", lastName: "屋比久" },
-                "terai-masato": { firstName: "真斗", lastName: "寺井" },
                 "takahashi-kaito": { firstName: "海斗", lastName: "高橋" },
                 "takeda-yutaka": { firstName: "豊", lastName: "武田" },
                 "yanaka-yasuo": { firstName: "康生", lastName: "谷中" },
