--- a/tools/match-input-helper.html
+++ b/tools/match-input-helper.html
@@ -166,7 +166,6 @@
                 "ando-yusaku": { firstName: "悠作", lastName: "安藤" },
                 "kawasaki-kohei": { firstName: "康平", lastName: "川崎" },
                 "uchida-riku": { firstName: "理久", lastName: "内田" },
-                "kurosaka-takuya": { firstName: "卓矢", lastName: "黒坂" },
                 "mori-ryosuke": { firstName: "良輔", lastName: "森" },
                 "takeda-ryo": { firstName: "凌", lastName: "竹田" },
                 "iwata-kohei": { firstName: "皓平", lastName: "岩田" },
@@ -185,7 +184,7 @@
                 "hayashi-seita": { firstName: "星汰", lastName: "林" },
                 "noguchi-kai": { firstName: "快", lastName: "野口" },
                 "inami-koyu": { firstName: "虎佑", lastName: "稲見" },
-                "tsushima-seora": { firstName: "青空", lastName: "津島" },
+                "tsushima-sora": { firstName: "青空", lastName: "津島" },
                 "kamijo-shinnosuke": { firstName: "真之介", lastName: "上城" },
                 "murasaki-yuya": { firstName: "優哉", lastName: "村崎" },
                 "negishi-remon": { firstName: "澪紋", lastName: "根岸" },
@@ -200,7 +199,6 @@
                 "okamoto-souma": { firstName: "颯舞", lastName: "岡本" },
                 "fukushima-ryo": { firstName: "涼", lastName: "福島" },
                 "yabiku-hiromu": { firstName: "大夢", lastName: "屋比久" },
-                "terai-masato": { firstName: "真斗", lastName: "寺井" },
                 "takahashi-kaito": { firstName: "海斗", lastName: "高橋" },
                 "takeda-yutaka": { firstName: "豊", lastName: "武田" },
                 "yanaka-yasuo": { firstName: "康生", lastName: "谷中" },
