--- a/tools/tournament.html
+++ b/tools/tournament.html
@@ -85,26 +85,18 @@
 
   <script>
     // パッキン用ダミーペア
-    const byePlayer = { id: "bye", name: "パッキン", information: [] };
+    const byePlayer = { id: "bye", name: "1回戦免除", information: [] };
 
     // プレイヤー情報（ペア名 + 各プレイヤーID）
     const initialPlayers = [
-      { id: "1", name: "田中・佐藤", information: [{ playerId: "p1" }, { playerId: "p2" }] },
-      { id: "2", name: "鈴木・山田", information: [{ playerId: "p3" }, { playerId: "p4" }] },
-      { id: "3", name: "高橋・伊藤", information: [{ playerId: "p5" }, { playerId: "p6" }] },
+      { id: "1", name: "田中・佐藤", information: [{ playerId: null }, { playerId: "p2" }] },
+      { id: "2", name: "鈴木・山田", information: [{ playerId: "p3" }, { playerId: null }] },
+      { id: "3", name: "高橋・伊藤", information: [{ playerId: null }, { playerId: "p6" }] },
       { id: "4", name: "加藤・山口", information: [{ playerId: "p7" }, { playerId: "p8" }] },
       { id: "5", name: "中村・小林", information: [{ playerId: "p9" }, { playerId: "p10" }] },
-      { id: "6", name: "渡辺・松本", information: [{ playerId: "p11" }, { playerId: "p12" }] },
+      { id: "6", name: "渡辺・松本", information: [{ playerId: null }, { playerId: "p12" }] },
       { id: "7", name: "山田・佐々木", information: [{ playerId: "p15" }, { playerId: "p16" }] },
       { id: "8", name: "井上・木村", information: [{ playerId: "p13" }, { playerId: "p14" }] },
-      { id: "9", name: "吉田・山本", information: [{ playerId: "p17" }, { playerId: "p18" }] },
-      { id: "10", name: "清水・中島", information: [{ playerId: "p19" }, { playerId: "p20" }] },
-      { id: "11", name: "林・池田", information: [{ playerId: "p21" }, { playerId: "p22" }] },
-      { id: "12", name: "山崎・藤田", information: [{ playerId: "p23" }, { playerId: "p24" }] },
-      { id: "13", name: "岡田・石井", information: [{ playerId: "p25" }, { playerId: "p26" }] },
-      { id: "14", name: "森・松田", information: [{ playerId: "p27" }, { playerId: "p28" }] },
-      { id: "15", name: "福田・西村", information: [{ playerId: "p29" }, { playerId: "p30" }] },
-      { id: "16", name: "遠藤・近藤", information: [{ playerId: "p31" }, { playerId: "p32" }] }
     ];
 
     // 初期ラウンドの試合ペア（4ペアから2試合）
@@ -113,11 +105,44 @@
       { p1: initialPlayers[2], p2: initialPlayers[3], scores: { p1: null, p2: null }, winner: null },
       { p1: initialPlayers[4], p2: initialPlayers[5], scores: { p1: null, p2: null }, winner: null },
       { p1: initialPlayers[6], p2: initialPlayers[7], scores: { p1: null, p2: null }, winner: null },
-      { p1: initialPlayers[8], p2: initialPlayers[9], scores: { p1: null, p2: null }, winner: null },
-      { p1: initialPlayers[10], p2: initialPlayers[11], scores: { p1: null, p2: null }, winner: null },
-      { p1: initialPlayers[12], p2: initialPlayers[13], scores: { p1: null, p2: null }, winner: null },
-      { p1: initialPlayers[14], p2: initialPlayers[15], scores: { p1: null, p2: null }, winner: null }
     ];
+    // const initialPlayers = [
+    //   { id: "1", name: "田中・佐藤", information: [{ playerId: "p1" }, { playerId: "p2" }] },
+    //   byePlayer,
+
+    //   { id: "2", name: "鈴木・山田", information: [{ playerId: "p3" }, { playerId: "p4" }] },
+    //   { id: "3", name: "高橋・伊藤", information: [{ playerId: "p5" }, { playerId: "p6" }] },
+
+    //   { id: "4", name: "加藤・山口", information: [{ playerId: "p7" }, { playerId: "p8" }] },
+    //   byePlayer,
+
+    //   { id: "5", name: "中村・小林", information: [{ playerId: "p9" }, { playerId: "p10" }] },
+    //   byePlayer,
+
+    //   { id: "6", name: "渡辺・松本", information: [{ playerId: "p11" }, { playerId: "p12" }] },
+    //   byePlayer,
+
+    //   { id: "7", name: "山田・佐々木", information: [{ playerId: "p15" }, { playerId: "p16" }] },
+    //   byePlayer,
+
+    //   { id: "8", name: "井上・木村", information: [{ playerId: "p13" }, { playerId: "p14" }] },
+    //   { id: "9", name: "吉田・山本", information: [{ playerId: "p17" }, { playerId: "p18" }] },
+
+    //   byePlayer,
+    //   { id: "10", name: "清水・中島", information: [{ playerId: "p19" }, { playerId: "p20" }] },
+    // ];
+
+    // // 初期ラウンドの試合ペア（4ペアから2試合）
+    // let roundMatches = [
+    //   { p1: initialPlayers[0], p2: initialPlayers[1], scores: { p1: null, p2: null }, winner: null },
+    //   { p1: initialPlayers[2], p2: initialPlayers[3], scores: { p1: null, p2: null }, winner: null },
+    //   { p1: initialPlayers[4], p2: initialPlayers[5], scores: { p1: null, p2: null }, winner: null },
+    //   { p1: initialPlayers[6], p2: initialPlayers[7], scores: { p1: null, p2: null }, winner: null },
+    //   { p1: initialPlayers[8], p2: initialPlayers[9], scores: { p1: null, p2: null }, winner: null },
+    //   { p1: initialPlayers[10], p2: initialPlayers[11], scores: { p1: null, p2: null }, winner: null },
+    //   { p1: initialPlayers[12], p2: initialPlayers[13], scores: { p1: null, p2: null }, winner: null },
+    //   { p1: initialPlayers[14], p2: initialPlayers[15], scores: { p1: null, p2: null }, winner: null }
+    // ];
 
     let roundHistory = [];
     let roundNumber = 1;
@@ -191,7 +216,7 @@
 
       document.getElementById(`winner-${matchIndex}`).textContent = getWinnerName(match);
       updateScoreButtons(matchIndex);
-      updateJsonOutput();
+      updateJsonOutput(roundHistory.map(round => round.matches));
     }
 
     // パッキン戦は初期勝者決定しておく
@@ -250,7 +275,7 @@
       // パッキン戦のスコアボタンは非表示にし、勝者自動決定
       autoDecideByeMatches();
       roundMatches.forEach((_, i) => updateScoreButtons(i));
-      updateJsonOutput();
+      updateJsonOutput(roundHistory.map(round => round.matches));
     }
     document.getElementById("setRoundBtn").addEventListener("click", () => {
       const newRound = parseInt(document.getElementById("roundInput").value);
@@ -280,9 +305,8 @@
 
       // 優勝判定
       if (winners.length === 1) {
-        alert(`優勝は ${winners[0].name} です！`);
         document.getElementById("nextRoundBtn").disabled = true;
-        updateJsonOutput();
+        updateJsonOutput(roundHistory.map(round => round.matches));
         return;
       }
 
@@ -302,20 +326,70 @@
     });
 
     // JSON出力更新
-
-    function updateJsonOutput() {
+    function updateJsonOutput(roundHistory) {
       const output = {
-        matches: roundHistory.flatMap(round =>
-          round.matches
-            .filter(m => m.p1.id !== "bye" && m.p2.id !== "bye") // bye戦を除外
-            .map(m => ({
-              round: round.round,
-              p1: { id: m.p1.id, name: m.p1.name, information: m.p1.information },
-              p2: { id: m.p2.id, name: m.p2.name, information: m.p2.information },
-              scores: m.scores
-            }))
-        )
+        resultSummary: [],
+        rounds: roundHistory,
       };
+
+      const roundCount = roundHistory.length;
+      const resultPairs = new Set();
+
+      const roundRankings = {};
+      roundRankings[roundCount - 1] = { winner: "優勝", loser: "準優勝" };
+      if (roundCount - 2 >= 0) roundRankings[roundCount - 2] = { loser: "ベスト4" };
+      if (roundCount - 3 >= 0) roundRankings[roundCount - 3] = { loser: "ベスト8" };
+
+      const getPairKey = (info) => info?.information?.map(p => p.playerId).sort().join("-");
+      const getPairArray = (info) => info?.information?.map(p => p.playerId).sort();
+
+      for (let i = roundCount - 1; i >= 0; i--) {
+        const matches = roundHistory[i];
+        const ranking = roundRankings[i];
+        if (!ranking) continue;
+
+        for (const match of matches) {
+          if (!match.p1 || !match.p2 || !match.winner) continue;
+
+          const p1Key = getPairKey(match.p1);
+          const p2Key = getPairKey(match.p2);
+          const p1Array = getPairArray(match.p1);
+          const p2Array = getPairArray(match.p2);
+          if (!p1Key || !p2Key) continue;
+
+          // nullが含まれるペアは除外
+          const isValidPair = (arr) => arr.every(id => id !== null && id !== undefined);
+
+          const isP1Winner = match.winner === match.p1.id;
+          const winnerKey = isP1Winner ? p1Key : p2Key;
+          const loserKey = isP1Winner ? p2Key : p1Key;
+          const winnerArray = isP1Winner ? p1Array : p2Array;
+          const loserArray = isP1Winner ? p2Array : p1Array;
+
+          if (ranking.winner && !resultPairs.has(winnerKey) && isValidPair(winnerArray)) {
+            output.resultSummary.push({
+              pair: winnerArray,
+              finalRound: ranking.winner,
+            });
+            resultPairs.add(winnerKey);
+          }
+          if (ranking.loser && !resultPairs.has(loserKey) && isValidPair(loserArray)) {
+            output.resultSummary.push({
+              pair: loserArray,
+              finalRound: ranking.loser,
+            });
+            resultPairs.add(loserKey);
+          }
+
+          if (!ranking.winner && ranking.loser && !resultPairs.has(loserKey) && isValidPair(loserArray)) {
+            output.resultSummary.push({
+              pair: loserArray,
+              finalRound: ranking.loser,
+            });
+            resultPairs.add(loserKey);
+          }
+        }
+      }
 
       document.getElementById("jsonOutput").value = JSON.stringify(output, null, 2);
     }
